_kube/url/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-api-deployment
  namespace: shortener-app
  labels:
    app: url-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: url-api
  template:
    metadata:
      labels:
        app: url-api
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - kubeclass-187
                - kubeclass-188
      containers:
      - name: url-api-container
        image: jwnheo/url-api:v1
        ports:
        - containerPort: 5001
        # command: ["sh", "-c", "sleep 10; pipenv run python manage.py migrate && pipenv run python manage.py runserver 0.0.0.0:8000"]
