_kube/url/api-network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: url-api-network
  namespace: shortener-app
spec:
  podSelector:
    matchLabels:
      app: url-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
      - port: 5432
