_kube/url/dns-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: url-api-deny-egress
  namespace: shortener-app
spec:
  podSelector:
    matchLabels:
      app: url-api
  policyTypes:
  - Egress
  egress:
  # allow DNS resolution
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
